--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
-<html>
-<body>
-  <head></head>
+<!DOCTYPE html>
+<html lang="en">
 
-<script src="processing-1.0.0.min.js"></script>
-<canvas data-processing-sources="minesweep.pde"></canvas>
+<head> 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Minesweeper</title>
+	
+    <!-- Google Font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+	<div class="container">
+
+        <script src="processing-1.0.0.min.js"></script>
+        <canvas data-processing-sources="minesweep.pde"></canvas>
+
+	</div>   
+    
+
+    <footer>
+    </footer>
+
+<!-- =========================
+     SCRIPTS 
+============================== -->
+
+
+
 
 </body>
+
 </html>
