--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 
 </head>
 
