--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="Style.css">
-
+	
+    <script src="processing-1.0.0.min.js"></script>
+	
 </head>
 
 <body>
 
 	<div class="container">
-
-        <script src="processing-1.0.0.min.js"></script>
-        <canvas data-processing-sources="minesweep.pde"></canvas>
+		
+		<h1>Minesweeper Game</h1>
+       
+        	<canvas data-processing-sources="minesweep.pde"></canvas>
 
 	</div>   
     
