--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Minesweeper Game</h1>
+		<h1>Radioactive Minesweeper</h1>
+		<p>Game Project made in Processing by <a href="www.jklintan.com">JKlintan</a>
         	<canvas data-processing-sources="minesweep.pde"></canvas>
+		<a href="www.jklintan.github.com/minesweeper">Play again?</a>
 	</div>   
     <footer>
     </footer>
