--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h1>Radioactive Minesweeper</h1>
 		<p>Game Project made in Processing by <a href="www.jklintan.com">JKlintan</a>
         	<canvas data-processing-sources="minesweep.pde"></canvas>
-		<a href="www.jklintan.github.com/minesweeper">Play again?</a>
+		<a href="https://jklintan.github.io/minesweeper/">Play again?</a>
 	</div>   
     <footer>
     </footer>
