--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="container">
 		<h1>Radioactive Minesweeper</h1>
-		<p>Game Project made in Processing by <a href="www.jklintan.com">JKlintan</a>
+		<p>Game Project made in Processing by <a href="http://www.jklintan.com">JKlintan</a>
         	<canvas data-processing-sources="minesweep.pde"></canvas>
 		<a href="https://jklintan.github.io/minesweeper/">Play again?</a>
 	</div>   
