--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body>
 	<div class="container">
 		<h1>Radioactive Minesweeper</h1>
-		<p>Game Project made in Processing by <a href="http://www.jklintan.com">JKlintan</a>
-		<br/>
+		<p>Game Project made in Processing by <a href="http://www.jklintan.com">JKlintan</a></p>
+		<h3>Instructions</h3>
+		<p class="instructions">An evil villain has placed out radioactive bombs in the field below. 
+		Your job is to determine their position by right click on the square to avoid a catastrophe.</p>
         	<canvas data-processing-sources="minesweep.pde"></canvas>
 		<a href="https://jklintan.github.io/minesweeper/">Play again?</a>
 	</div>   
