--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		Left clicking on a square will expose how many bombs that square is adjacent to.
 		Your job is to avoid a radioactive world catastrophy by determine the bombs position with right clicks.</p>
         	<canvas data-processing-sources="minesweep.pde"></canvas>
-		<a href="https://jklintan.github.io/minesweeper/">Play again?</a>
+		<a href="https://jklintan.github.io/Minesweeper/">Play again?</a>
 	</div>   
 </body>
 </html>
